[package]
name = "cloudflare_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.17.0", features = ["full"] }
async-std = "1.11.0"
futures = "0.3.21"
error-chain = "0.12.4"
serde_json = "1.0"
derivative = "2.2.0"
